--- a/IDTokenValidator.xcodeproj/xcshareddata/xcschemes/IDTokenValidator.xcscheme
+++ b/IDTokenValidator.xcodeproj/xcshareddata/xcschemes/IDTokenValidator.xcscheme
@@ -26,7 +26,18 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "D587742A23287C3000180C07"
+            BuildableName = "IDTokenValidator.framework"
+            BlueprintName = "IDTokenValidator"
+            ReferencedContainer = "container:IDTokenValidator.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
